syntax = "proto3";

package worker;

option go_package = "./workerpb;workerpb";

// Request from Load Generator
message WorkRequest {
  int32 duration_ms = 1; // CPU spin duration in milliseconds
}

// Response from Worker
message WorkResponse {
  string status = 1;
  int64 e2e_latency_ms = 2;
  int64 avg_cpu_freq_khz = 3; // Average CPU frequency (in kHz)
  int64 iterations = 4; // number of busy-spin loops iterated
}

// Service definition
service WorkerService {
  rpc DoWork(WorkRequest) returns (WorkResponse);
}
